# elf-sandbox

./: .gitignore  Cargo.toml  Makefile.toml  README.md  setup.sh  sysmon-setup.sh
analyzer/: Cargo.toml
analyzer/src/: args.rs  main.rs  rule.rs  syslog.rs
common/src/: lib.rs
src/: analyzer.rs  args.rs  container.rs  lxc.rs  main.rs  mount_entry.rs  sandbox.rs
