[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"]}
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.3"
roxmltree = "0.18.0"
serde = { version = "1.0.183", features = ["derive"]}
sudo = "0.6.0"
